# controller/dto/menu.go
@@ -5,3 +5,15 @@ type MenuIndex struct {
 	Status string ` uri:"status" form:"status" query:"status"`
 	Pid    string `uri:"pid" form:"pid" query:"pid"`
 }
+
+type SaveMenu struct {
+}
+
+type UpdateMenu struct {
+	ID uint `json:"id" form:"id" binding:"required"`
+	SaveMenu
+}
+
+type DeleteMenu struct {
+	ID uint `json:"id" form:"id" binding:"required"`
+}
